@@ -3,7 +3,6 @@ OpenLDAP 2.3 Change Log
 OpenLDAP 2.3.12 Release
 	Fixed libldap ldapi:// authdn construction
 	Added libldap ldap_bv2escaped_filter_value (ITS#2535)
-	Fixed libldap HSTRERROR issue (ITS#4124)
 	Added libldap/slapd TLS DSA certificate support (ITS#4017)
 	Fixed libldap SASL bind issue (ITS#4158)
 	Fixed ldapmodrdn empty line handling (ITS#4101)
@@ -15,7 +14,6 @@ OpenLDAP 2.3.12 Release
 	Fixed slapd cn=config access modify issue (ITS#4127)
 	Fixed slapd cn=config init issue (ITS#4128)
 	Fixed slapd non-reentrant libwrap issue (ITS#4099)
-	Fixed slapd AIX IFMT issue (ITS#4123)
 	Fixed slapd thread v. tools_threads settings
 	Fixed slapd spurious defer message (ITS#3850)
 	Fixed slapd attribute SYNTAX OIDM issue (ITS#4116)
@@ -43,7 +41,10 @@ OpenLDAP 2.3.12 Release
 	Fixed slurpd backwards compat issue (ITS#4151)
 	Added slurpd pid/arg file consistency check (ITS#4152)
 	Updated contrib smbk5pwd module
+	Removed lint
 	Build environment
+		Fixed libldap HSTRERROR issue (ITS#4124)
+		Fixed slapd AIX IFMT issue (ITS#4123)
 		Added slapd-bind test program
 		Added inet_ntoa_b support for VxWorks (ITS#3440)
 		Updated test036 (ITS#4095)
